--- a/Selenium.ipynb
+++ b/Selenium.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b029ef8",
+   "id": "09b2a901",
    "metadata": {},
    "outputs": [
     {
@@ -2640,6 +2640,8 @@
     }
    ],
    "source": [
+    "# Replace bash with shell in Colab \n",
+    "# %%shell\n",
     "%%bash\n",
     "apt -y update\n",
     "apt install -y wget curl unzip\n",
@@ -2658,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0559405",
+   "id": "80e568eb",
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afee8543",
+   "id": "d668e85c",
    "metadata": {},
    "outputs": [],
    "source": []
