--- a/Selenium.ipynb
+++ b/Selenium.ipynb
@@ -2350,10 +2350,9 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P /tmp/\n",
-    "apt install -f -y /tmp/google-chrome-stable_current_amd64.deb\n",
-    "pip install selenium"
+    "!wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P /tmp/\n",
+    "!apt install -f -y /tmp/google-chrome-stable_current_amd64.deb\n",
+    "!pip install selenium"
    ]
   },
   {
